# src/course/application/dto/request/upload-course-image.request.dto.type.ts
@@ -1,0 +1,10 @@
+
+
+interface UploadCourseImageRequestDTO {
+	authorizationToken: string;
+	mimeType: string
+}
+
+export {
+	UploadCourseImageRequestDTO
+};
