# src/course/interfaces/controller/course.controller.ts
@@ -1,8 +1,8 @@
-import { Controller, Get } from "@arunvaradharajalu/common.decorators";
+import { Controller, Get, Post } from "@arunvaradharajalu/common.decorators";
 import { Request, Response, NextFunction } from "express";
-import { getResponseHandler, winstonLogger } from "../../../utils";
-import { getCourseFactory } from "../../../global-config";
-import { GetAllCoursesUseCase } from "../../application";
+import { ErrorCodes, GenericError, getResponseHandler, winstonLogger } from "../../../utils";
+import { authorizationTokenName, getCourseFactory } from "../../../global-config";
+import { GetAllCoursesUseCase, UploadCourseImageRequestDTOImpl, UploadCourseImageUseCase } from "../../application";
 
 
 
@@ -31,6 +31,64 @@ export class CourseController {
 		} catch (error) {
 			winston.error(
 				"Error in get course list:",
+				error
+			);
+
+			next(error);
+		}
+	}
+
+	@Post("/upload-image")
+	async uploadCourseImage(
+		request: Request,
+		response: Response,
+		next: NextFunction
+	): Promise<void> {
+		const winston = winstonLogger.winston;
+		try {
+			winston.info("Uploading course image");
+
+			const authorizationToken = request.header(authorizationTokenName);
+			if (!authorizationToken)
+				throw new GenericError({
+					code: ErrorCodes.invalidAuthorizationToken,
+					error: new Error("Invalid authorization token"),
+					errorCode: 400
+				});
+
+			if (!request.body.mimeType)
+				throw new GenericError({
+					code: ErrorCodes.courseImageMimeTypeRequired,
+					error: new Error("Mime type required"),
+					errorCode: 400
+				});
+
+			const courseFactory = getCourseFactory();
+			const responseHandler = getResponseHandler();
+
+			const uploadCourseImageRequestDTO =
+				new UploadCourseImageRequestDTOImpl();
+			uploadCourseImageRequestDTO.authorizationToken =
+				authorizationToken;
+			uploadCourseImageRequestDTO.mimeType =
+				request.body.mimeType;
+
+			const uploadCourseImageUseCase = courseFactory.make("UploadCourseImageUseCase") as UploadCourseImageUseCase;
+			uploadCourseImageUseCase
+				.uploadCourseImageRequestDTO =
+				uploadCourseImageRequestDTO;
+
+			const uploadCourseImageResponseDTO =
+				await uploadCourseImageUseCase
+					.execute();
+
+			responseHandler.ok(
+				response,
+				uploadCourseImageResponseDTO
+			);
+		} catch (error) {
+			winston.error(
+				"Error in uploading course image:",
 				error
 			);
 
